# sphinx-process-graph

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yml  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst
scripts/: get_info.py
src/sphinx_graph/: __init__.py  __main__.py  html_like.py  sphinx_graph.toml
